// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageDropdownButton disabled 1`] = `
<div>
  <div
    class="lk-dropdown btn-group dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-default dropdown-toggle"
      disabled=""
      id="dropdown-button-2"
      role="button"
      type="button"
    >
      <span>
        <i
          class="fa fa-bars"
        />
         Manage
      </span>
    </button>
    <ul
      aria-labelledby="dropdown-button-2"
      class="dropdown-menu dropdown-menu-right"
      role="menu"
    />
  </div>
</div>
`;

exports[`ManageDropdownButton showIcon false 1`] = `
<div>
  <div
    class="lk-dropdown btn-group dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-default dropdown-toggle"
      id="dropdown-button-1"
      role="button"
      type="button"
    >
      <span>
        Manage
      </span>
    </button>
    <ul
      aria-labelledby="dropdown-button-1"
      class="dropdown-menu dropdown-menu-right"
      role="menu"
    />
  </div>
</div>
`;

exports[`ManageDropdownButton default props 1`] = `
<div>
  <div
    class="lk-dropdown btn-group dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-default dropdown-toggle"
      id="dropdown-button-0"
      role="button"
      type="button"
    >
      <span>
        <i
          class="fa fa-bars"
        />
         Manage
      </span>
    </button>
    <ul
      aria-labelledby="dropdown-button-0"
      class="dropdown-menu dropdown-menu-right"
      role="menu"
    />
  </div>
</div>
`;
